# dockhand-guardian

./: .commitlintrc.json  .cz-config.js  .czrc  .gitignore  .pre-commit-config.yaml  .prettierignore  .prettierrc.json  .releaserc.json  Agents.md  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  Makefile  README.md  docker-compose.yml  guardian.py  package-lock.json  package.json  pyproject.toml  requirements.txt  test-format.json  test_guardian.py
.devcontainer/: devcontainer.json
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md  SCOPES.md  copilot-instructions.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: dependabot-auto-merge.yml  docker-publish.yml  lint.yml  release.yml  test.yml  trivy-remediation.yml  trivy.yml
docker/: Dockerfile  docker-compose.yml
docs/: CHANGELOG.md  CONTRIBUTING.md  README.md  WEBHOOKS.md
src/: __init__.py  guardian.py
tests/: test_guardian.py
